src/BoatReservation/src/Base/main/default/objects/Partner_Volume_Level__mdt/Partner_Volume_Level__mdt.object-meta.xml
<CustomObject>
    <description>A level representing what percent of discount is applied if the order falls in between the nin and max</description>
    <label>Partner Volume  Level</label>
    <pluralLabel>Partner Volume  Levels</pluralLabel>
</CustomObject>