src/BoatReservation/src/Base/main/default/objects/Partner_Volume_Level__mdt/fields/Lower_Limit__c.field-meta.xml
<CustomField>
    <fullName>Lower_Limit__c</fullName>
    <description>The lowest point at which this level begins, equal to or greater than</description>
    <inlineHelpText>The lowest point at which this level begins, equal to or greater than</inlineHelpText>
    <label>Lower Limit</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>