src/BoatReservation/src/Base/main/default/objects/Partner_Volume_Level__mdt/fields/Partner_Volume_Program__c.field-meta.xml
<CustomField>
    <fullName>Partner_Volume_Program__c</fullName>
    <description>The Volume Program this Level is used with</description>
    <inlineHelpText>The Volume Program this Level is used with</inlineHelpText>
    <label>Partner Volume Program</label>
    <referenceTo>Partner_Volume_Program__mdt</referenceTo>
    <relationshipLabel>Partner Volume  Levels</relationshipLabel>
    <relationshipName>Partner_Volume_Levels</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>