src/BoatReservation/src/Base/main/default/objects/Partner_Volume_Level__mdt/fields/Upper_Limit__c.field-meta.xml
<CustomField>
    <fullName>Upper_Limit__c</fullName>
    <description>The point at which this level ends, equal to or greater than.
***Leave blank if you want to express this level applies to anything equal to or greater than the Lower Limit</description>
    <inlineHelpText>The point at which this level ends, equal to or greater than.
***Leave blank if you want to express this level applies to anything equal to or greater than the Lower Limit</inlineHelpText>
    <label>Upper Limit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>